src/passes/02-parsing/jsligo/Tests/contracts/top_level_patterns/negative/jsligo/record_tuple.jsligo
// TODO: write this in jsligo

// type r = { a : nat    * int * string
//          ; b : int    * nat * string
//          ; c : string * int * nat
//          }

// let r = { a = (abs(1)     , 1 , "H")
//         ; b = (2      , abs(2), "E")
//         ; c = ("Hello", 3 , abs(3) )
//         }
// let { a = (a1, a2, a3)
//     ; b = (b1, a2, b3)
//     ; c = (c1, c2, c3)
//     } = r
